cabal-version:   2.4
name:            nvfetcher
version:         0.1.0.0
synopsis:        Prefetch packages
homepage:        https://github.com/berberman/nvfetcher
bug-reports:     https://github.com/berberman/nvfetcher/issues
license:         MIT
license-file:    LICENSE
author:          berberman
maintainer:      berberman <berberman.yandex.com>
copyright:       2021 berberman
category:        Nix
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/berberman/nvfetcher.git

common common-options
  build-depends:
    , aeson
    , base                  >=4.8 && <5
    , binary
    , bytestring
    , extra
    , free
    , neat-interpolation
    , shake
    , text
    , transformers
    , unordered-containers

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wno-name-shadowing
    -Wno-unticked-promoted-constructors

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    NvFetcher
    NvFetcher.Core
    NvFetcher.NixFetcher
    NvFetcher.Nvchecker
    NvFetcher.PackageSet
    NvFetcher.ShakeExtras
    NvFetcher.Types

executable nvfetcher
  import:          common-options
  hs-source-dirs:  app
  main-is:         Main.hs
  other-modules:
    Config
    Paths_nvfetcher

  autogen-modules: Paths_nvfetcher
  build-depends:
    , nvfetcher
    , tomland
    , validation-selective

  ghc-options:     -threaded -rtsopts -with-rtsopts=-N

flag build-example
  description: Build example executable
  manual:      True
  default:     False

executable example
  import:        common-options

  if !flag(build-example)
    buildable: False

  main-is:       Main_example.hs
  build-depends: nvfetcher
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
